--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <!--! Navbar -->
-    <nav>
-        <!-- Hamburger -->
+    <nav id="nav">
+        <!--? Hamburger -->
         <button class="nav-btn">
             <div id="btn" class="nav-btn-inside">
                 <div class="hamburger-box">
@@ -20,9 +20,9 @@
                 </div>
             </div>
         </button>
-        <!-- <img class="hamburger" src="image/hamburger.png" alt="hamburger" height="22px"> -->
+
         <span class="logo"></span>
-        <ul>
+        <ul class="list">
             <li>Store</li>
             <li>Mac</li>
             <li>iPad</li>
@@ -33,9 +33,17 @@
             <li>Only on Apple</li>
             <li>Accessories</li>
             <li>Support</li>
-            <li class="search"></li>
         </ul>
+        <span class="search"></span>
         <span class="bag"></span>
+        <form id="" class="form">
+            <div class="form-search">
+                <span class="search"></span>
+                <input type="text" placeholder="Search apple.com" autocorrect="off" autocapitalize="off"
+                    autocomplete="off" spellcheck="false" role="combobox">
+                </button>
+            </div>
+        </form>
     </nav>
 
     <script src="js/script.js"></script>
