--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>iPhone - Apple</title>
+    <title>Apple</title>
 </head>
 
 <body>
@@ -45,7 +45,40 @@
             </div>
         </form>
     </nav>
-
+    <!--! Iphone 14 Pro  -->
+    <section class="Section_1 section1 Section_comman">
+        <h2 class="heading">iPhone 14 Pro</h2>
+        <h3 class="subHeading">Pro. Beyond.</h3>
+        <div class="section1-links">
+            <span class="section1-link">
+                <a href="#" target="_self" data-analytics-region="learn more"
+                    data-analytics-title="Learn more about iPhone 14 Pro"
+                    aria-label="Learn more about iPhone 14 Pro">Learn
+                    more</a>&gt;
+            </span>
+            <span class="section1-link">
+                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+            </span>
+        </div>
+    </section>
+    <!--! Iphone 14 -->
+    <section class="Section_1 section2 Section_comman">
+        <h2 class="heading">iPhone 14</h2>
+        <h3 class="subHeading">Big and bigger.</h3>
+        <div class="section1-links">
+            <span class="section1-link">
+                <a href="#" target="_self" data-analytics-region="learn more"
+                    data-analytics-title="Learn more about iPhone 14 Pro"
+                    aria-label="Learn more about iPhone 14 Pro">Learn
+                    more</a>&gt;
+            </span>
+            <span class="section1-link">
+                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+            </span>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 
