Add watch session

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="image/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <title>Apple</title>
 </head>
@@ -79,9 +81,23 @@
             </span>
         </div>
     </section>
-
-
-    
+    <!--! Apple Watch -->
+    <section class="Section_1 section3 Section_comman">
+        <h2 class="Watch_heading"></h2>
+        <h3 class="subHeading">A healthy leap ahead.</h3>
+        <div class="section1-links">
+            <span class="section1-link">
+                <a href="#" target="_self" data-analytics-region="learn more"
+                    data-analytics-title="Learn more about iPhone 14 Pro"
+                    aria-label="Learn more about iPhone 14 Pro">Learn
+                    more</a>&gt;
+            </span>
+            <span class="section1-link">
+                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+            </span>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 
