add iPad Section

--- a/index.html
+++ b/index.html
@@ -47,57 +47,126 @@
             </div>
         </form>
     </nav>
-    <!--! Iphone 14 Pro  -->
-    <section class="Section_1 section1 Section_comman">
-        <h2 class="heading">iPhone 14 Pro</h2>
-        <h3 class="subHeading">Pro. Beyond.</h3>
-        <div class="section1-links">
-            <span class="section1-link">
-                <a href="#" target="_self" data-analytics-region="learn more"
-                    data-analytics-title="Learn more about iPhone 14 Pro"
-                    aria-label="Learn more about iPhone 14 Pro">Learn
-                    more</a>&gt;
-            </span>
-            <span class="section1-link">
-                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
-                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
-            </span>
-        </div>
-    </section>
-    <!--! Iphone 14 -->
-    <section class="Section_1 section2 Section_comman">
-        <h2 class="heading">iPhone 14</h2>
-        <h3 class="subHeading">Big and bigger.</h3>
-        <div class="section1-links">
-            <span class="section1-link">
-                <a href="#" target="_self" data-analytics-region="learn more"
-                    data-analytics-title="Learn more about iPhone 14 Pro"
-                    aria-label="Learn more about iPhone 14 Pro">Learn
-                    more</a>&gt;
-            </span>
-            <span class="section1-link">
-                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
-                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
-            </span>
-        </div>
-    </section>
-    <!--! Apple Watch -->
-    <section class="Section_1 section3 Section_comman">
-        <h2 class="Watch_heading"></h2>
-        <h3 class="subHeading">A healthy leap ahead.</h3>
-        <div class="section1-links">
-            <span class="section1-link">
-                <a href="#" target="_self" data-analytics-region="learn more"
-                    data-analytics-title="Learn more about iPhone 14 Pro"
-                    aria-label="Learn more about iPhone 14 Pro">Learn
-                    more</a>&gt;
-            </span>
-            <span class="section1-link">
-                <a href="#" target="_self" rel="follow" data-analytics-region="buy"
-                    data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
-            </span>
-        </div>
-    </section>
+    <main>
+        <!--! Iphone 14 Pro  -->
+        <section class="Section_1 section1 Section_comman">
+            <h2 class="heading">iPhone 14 Pro</h2>
+            <h3 class="subHeading">Pro. Beyond.</h3>
+            <div class="section1-links">
+                <span class="section1-link">
+                    <a href="#" target="_self" data-analytics-region="learn more"
+                        data-analytics-title="Learn more about iPhone 14 Pro"
+                        aria-label="Learn more about iPhone 14 Pro">Learn
+                        more</a>&gt;
+                </span>
+                <span class="section1-link">
+                    <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                        data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                </span>
+            </div>
+        </section>
+        <!--! Iphone 14 -->
+        <section class="Section_1 section2 Section_comman">
+            <h2 class="heading">iPhone 14</h2>
+            <h3 class="subHeading">Big and bigger.</h3>
+            <div class="section1-links">
+                <span class="section1-link">
+                    <a href="#" target="_self" data-analytics-region="learn more"
+                        data-analytics-title="Learn more about iPhone 14 Pro"
+                        aria-label="Learn more about iPhone 14 Pro">Learn
+                        more</a>&gt;
+                </span>
+                <span class="section1-link">
+                    <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                        data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                </span>
+            </div>
+        </section>
+        <!--! Apple Watch -->
+        <section class="Section_1 section3 Section_comman">
+            <h2 class="Watch_heading"></h2>
+            <h3 class="subHeading">A healthy leap ahead.</h3>
+            <div class="section1-links">
+                <span class="section1-link">
+                    <a href="#" target="_self" data-analytics-region="learn more"
+                        data-analytics-title="Learn more about iPhone 14 Pro"
+                        aria-label="Learn more about iPhone 14 Pro">Learn
+                        more</a>&gt;
+                </span>
+                <span class="section1-link">
+                    <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                        data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                </span>
+            </div>
+        </section>
+        <!--! 2 Section  -->
+        <section class="section_2">
+            <!--? One -->
+            <section class="one Csection_2">
+                <h2 class="Watch2_heading cHeading"></h2>
+                <h3 class="subHeading">Adventure awaits.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Learn
+                            more</a>&gt;
+                    </span>
+                    <span class="section1-link">
+                        <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                            data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                    </span>
+                </div>
+            </section>
+            <!--? two -->
+            <section class="two Csection_2">
+                <h2 class="fitness_heading cHeading"></h2>
+                <h3 class="subHeading">New Artist Spotlight workouts with music by Beyoncé.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Learn
+                            more</a>&gt;
+                    </span>
+                    <span class="section1-link">
+                        <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                            data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                    </span>
+                </div>
+            </section>
+            <!--? three -->
+            <section class="three Csection_2">
+                <h2 class="heading">A gift for every wish.</h2>
+                <h3 class="subHeading">Find something for everyone this Lunar New Year.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Shop the gift guide
+                        </a>&gt;
+                    </span>
+                </div>
+            </section>
+            <!--? four -->
+            <section class="four Csection_2">
+                <h2 class="heading">iPad</h2>
+                <h3 class="subHeading">Lovable. Drawable. Magical.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Learn
+                            more</a>&gt;
+                    </span>
+                    <span class="section1-link">
+                        <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                            data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                    </span>
+                </div>
+            </section>
+        </section>
+    </main>
     <script src="js/script.js"></script>
 </body>
 
