Add Card Sections

--- a/index.html
+++ b/index.html
@@ -165,6 +165,41 @@
                     </span>
                 </div>
             </section>
+            <!--? fifth -->
+            <section class="fifth Csection_2">
+                <h2 class="heading">AirPods Pro</h2>
+                <h3 class="subHeading">Rebuilt from the sound up.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Learn
+                            more</a>&gt;
+                    </span>
+                    <span class="section1-link">
+                        <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                            data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Buy</a>&gt;
+                    </span>
+                </div>
+            </section>
+            <!--? sixth -->
+            <section class="sixth Csection_2">
+                <h2 class="card_heading cHeading"></h2>
+                <!-- <h2 class="heading">AirPods Pro</h2> -->
+                <h3 class="subHeading">Get up to 3% Daily Cash back with every purchase.</h3>
+                <div class="section1-links">
+                    <span class="section1-link">
+                        <a href="#" target="_self" data-analytics-region="learn more"
+                            data-analytics-title="Learn more about iPhone 14 Pro"
+                            aria-label="Learn more about iPhone 14 Pro">Learn
+                            more</a>&gt;
+                    </span>
+                    <span class="section1-link">
+                        <a href="#" target="_self" rel="follow" data-analytics-region="buy"
+                            data-analytics-title="Buy iPhone 14 Pro" aria-label="Buy iPhone 14 Pro">Apply now</a>&gt;
+                    </span>
+                </div>
+            </section>
         </section>
     </main>
     <script src="js/script.js"></script>
